fix spacings

--- a/assets/sass/_theme/blocks/pages.sass
+++ b/assets/sass/_theme/blocks/pages.sass
@@ -10,6 +10,9 @@
         .title
             a::before
                 content: none
+    &--grid
+        .main-page
+            margin-bottom: $spacing2
     &--list
         .block-content
             @include grid(2, lg)
