--- a/assets/sass/_theme/design-system/layout.sass
+++ b/assets/sass/_theme/design-system/layout.sass
@@ -18,6 +18,7 @@ body
 
 
 main
+    padding-bottom: $spacing3
     // Create padding-top for fixed header under md
     @include media-breakpoint-down(md)
         padding-top: var(--header-height)
@@ -31,6 +32,7 @@ ul
 .blocks
     > *
         margin-top: $spacing3
+
 
 details
     &:not([open]):hover
